tests/trybuild/entities/length_not_integer.stderr
error[E0308]: mismatched types
    --> tests/trybuild/entities/length_not_integer.rs:10:38
     |
10   |     let entities = entities!((A, B); 1.5);
     |                    ------------------^^^-
     |                    |                 |
     |                    |                 expected `usize`, found floating-point number
     |                    arguments to this function are incorrect
     |
note: function defined here
    --> $RUST/alloc/src/vec/mod.rs
     |
     | pub fn from_elem<T: Clone>(elem: T, n: usize) -> Vec<T> {
     |        ^^^^^^^^^

error[E0308]: mismatched types
    --> tests/trybuild/entities/length_not_integer.rs:10:38
     |
10   |     let entities = entities!((A, B); 1.5);
     |                    ------------------^^^-
     |                    |                 |
     |                    |                 expected `usize`, found floating-point number
     |                    arguments to this function are incorrect
     |
note: function defined here
    --> $RUST/alloc/src/vec/mod.rs
     |
     | pub fn from_elem<T: Clone>(elem: T, n: usize) -> Vec<T> {
     |        ^^^^^^^^^
